# sc-curation-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-sc-curation-pipeline-h5ad-qc.md  2026-06-19-standardized-counts-output.md
docs/superpowers/specs/: 2026-06-18-sc-curation-pipeline-h5ad-qc-design.md  2026-06-19-gene-name-standardization-design.md  2026-06-19-standardized-counts-output-design.md  2026-06-20-cell-filtering-design.md  2026-06-23-mrvi-leiden-clustering-design.md
scripts/: mrvi_leiden_job.py  serve-ui.sh  ui-tunnel.sh
src/sc_curation_pipeline/defs/: doublets.py  filter_cells.py  filtering.py  harmonize_apply.py  metacols.py  mrvi.py  mrvi_compute.py  partitions.py  plots.py  qc.py  registration.py  sensors.py  settings.py  slurm_pipes.py  standardize.py
tests/: conftest.py  test_doublets.py  test_filter_cells.py  test_filtering.py  test_harmonize_apply.py  test_metacols.py  test_mrvi_compute.py  test_plots.py  test_qc.py  test_sensor.py  test_settings.py  test_slurm_pipes.py  test_standardize.py
