[project]
name = "sc_curation_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.10",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest>=8",
    "scanpy>=1.11",
    "anndata>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sc_curation_pipeline"
registry_modules = [
    "sc_curation_pipeline.components.*",
]


